--- a/React Port Site/public/index.html
+++ b/React Port Site/public/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+  <meta name="description" content="Stephen Morrow Portfolio Website">
+  <meta name="keywords" content="Resume, Personal Site, Web-development, hire">
+  <meta name="author" content="Stephen Morrow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React App</title>
   </head>
   <body>
